@@ -348,6 +348,9 @@ Core and builtins
 Library
 -------
 
+- Issue #1757: The hash of a Decimal instance is no longer affected by
+  the current context.
+
 - Patch #467924: add ZipFile.extract() and ZipFile.extractall() in the
   zipfile module.
 
